--- a/server/resources/application.properties
+++ b/server/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -8,14 +9,4 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-#---
-# TODO Append connection to DB
-#---
-
+spring.profiles.active=dev
